--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>LonacRally</title>
 	</head>
 	<body>
 		<nav>
@@ -17,9 +17,13 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Whatsapp everyone!</h1>
-				<p>It's LonacRally here and thank you for taking your time for visiting my site!<em>Thank you!</em> . <a href="/about">Wanna know more about me?...</a></p>
+				<p>It's LonacRally here and thank you for taking your time for visiting my site!<em>Thank you!</em> .. <a href="/about">Wanna know more about me?...</a></p>
+				<p>I love programming and developing softwares.</p>
+			
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+		
+		
 		<footer>
     		<ul>
         		<li><a href="mailto:tylonbertha@gmail.com">email</a></li>
