--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>LonacRally</title>
 		<!--link to stylesheet-->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<h1><center>LonacRally Company @ DIAW</center></h1>
 	</head>
 	<body>
 		<nav>
@@ -30,6 +31,7 @@
     		<ul>
         		<li><a href="mailto:tylonbertha@gmail.com">email</a></li>
         		<li><a href="https://github.com/lonac">github.com/lonac</a></li>
+        		<li><a href="https://web.facebook.com/barakamalonao">Facebook</a></li>
 			</ul>
 		</footer>
 	</body>
