--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>LonacRally</title>
 		<!--link to stylesheet-->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
-		<h1><center>LonacRally Company @ DIAW</center></h1>
+		<h1><center>LONACRALLY Company @ DIAW</center></h1>
 	</head>
 	<body>
 		<nav>
@@ -19,7 +19,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Whatsapp everyone!</h1>
+        		<h2>Whatsapp everyone!</h2>
 				<p>It's LonacRally here and thank you for taking your time for visiting my site!<em>Thank you!</em> .. <a href="/about">Wanna know more about me?...</a></p>
 				<p>I love programming and developing softwares.</p>
 			
