--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     		<ul>
         		<li><a href="mailto:tylonbertha@gmail.com">email</a></li>
         		<li><a href="https://github.com/lonac">github.com/lonac</a></li>
-        		
+	        		<li><a href="https://web.facebook.com/DIAW-Company-LTD">Facebook</a></li>
 			</ul>
 		</footer>
 	</body>
