--- a/index.html
+++ b/index.html
@@ -14,14 +14,35 @@
 	        	<li><a href="/about">About</a></li>
 	        	<li><a href="/gallery">Gallery</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        	
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h2>Whatsapp everyone!</h2>
-				<p>It's LonacRally here and thank you for taking your time for visiting my site!<em>Thank you!</em> .. <a href="/about">Wanna know more about me?...</a></p>
-				<p>I love programming and developing softwares.</p>
+        		<h2>Hellow!</h2>
+			<p>I am a self learner on programming and softwares development.</p>
+			<p>This came after knowing how to learn!.<em>Books + google are good teachers!</em> </p>
+			<div class="col-md-6">
+				<h3>My Interests</h3>
+				<ul>
+
+				    <li>Programming.</li>
+
+				    <li>Desing and developing webs.</li>
+
+				    <li>Software developments.</li>
+
+				    <li>Cyber security.</li>
+
+				    <li>Hacking.</li>
+
+				</ul>
+			    </div>
+		
+			<p>I have gone through php,html,css,bootsrap, java and now learning *LARAVEL*, one
+			among of the php frameworks!</p>
+			
+
 			
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
