--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
         		<li><a href="/news">News</a></li>
-	        	<li><a href="/about">About</a></li>
-	        	<li><a href="/gallery">Gallery</a></li>
-        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/projects">Projects</a></li>
         	
     		</ul>
 		</nav>
@@ -39,7 +37,7 @@
 				</ul>
 			    </div>
 		
-			<p>I have gone through php,html,css,bootsrap, java and now learning *LARAVEL*, one
+			<p>I have gone through php,html,css,bootstrap, java and now learning *LARAVEL*, one
 			among of the php frameworks!</p>
 			
 
