--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			    </div>
 		
 			<p>I have gone through php,html,css,bootstrap, java and now learning *LARAVEL*, one
-			among of the php frameworks!</p>
+			of the php frameworks!</p>
 			
 
 			
