--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				</ul>
 			    </div>
 		
-			<p>I have gone through php,html,css,bootstrap, java and now learning *LARAVEL*, one
+			<p>I have gone through php,html,css,c++,bootstrap, java and now learning *LARAVEL*, one
 			of the php frameworks!</p>
 			
 
