--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>LonacRally</title>
 		<!--link to stylesheet-->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
-		<h1><center>LONACRALLY Company @ DIAW</center></h1>
+		<h1><center>LONACRALLY @ DIAW</center></h1>
 	</head>
 	<body>
 		<nav>
