--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-        		<li><a href="/news">News</a></li>
         		<li><a href="/projects">Projects</a></li>
         	
     		</ul>
@@ -37,8 +36,16 @@
 				</ul>
 			    </div>
 		
-			<p>I have gone through php,html,css,c++,bootstrap, java and now learning *LARAVEL*, one
-			of the php frameworks!</p>
+			<p>Covarage so far is on php,html,css,c++,bootstrap, java and networking basics!</p>
+			<div class="col-md-5">
+				<h4>On going learnings</h4>
+				<ul>
+					<li>Laravel framework</li>
+					<li>Linux administration</li>
+					<li>Raspberry Pi</li>
+					
+				</ul>
+			</div>
 			
 
 			
