--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     		<div class="blurb">
         		<h2>Hellow!</h2>
 			<p>I am a self learner on programming and softwares development.</p>
-			<p>This came after knowing how to learn!.<em>Books + google are good teachers!</em> </p>
+			<p> <h2>Note :</h2> Machine can work better than you, so let us have it work for us. </p>
 			<div class="col-md-6">
 				<h3>My Interests</h3>
 				<ul>
 
 				    <li>Programming.</li>
 
-				    <li>Desing and developing webs.</li>
+				    <li>Desing and developing webs basically on Laravel framework.</li>
 
 				    <li>Software developments.</li>
 
@@ -40,9 +40,7 @@
 			<div class="col-md-5">
 				<h4>On going learnings</h4>
 				<ul>
-					<li>Laravel framework</li>
-					<li>Linux administration</li>
-					<li>Raspberry Pi</li>
+					<li>Machine Learning</li>	
 					
 				</ul>
 			</div>
@@ -55,9 +53,9 @@
 		
 		<footer>
     		<ul>
-        		<li><a href="mailto:tylonbertha@gmail.com">email</a></li>
+        		<li><a href="malongobaraka@gmail.com">email</a></li>
         		<li><a href="https://github.com/lonac">github.com/lonac</a></li>
-	        		<li><a href="https://web.facebook.com/DIAW-Company-LTD-1734121470187834/">Facebook</a></li>
+	        	<li><a href="https://www.facebook.com/LonacMalongo">Facebook</a></li>
 			</ul>
 		</footer>
 	</body>
