--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         		<li><a href="malongobaraka@gmail.com">email</a></li>
         		<li><a href="https://github.com/lonac">github.com/lonac</a></li>
 	        	<li><a href="https://www.facebook.com/LonacMalongo">Facebook</a></li>
+			<li><a href="https://twitter.com/lonac_rally"><span class="icon-twitter"><i class="fa fa-twitter-square fa-3x"></i></span></a>
+
 			</ul>
 		</footer>
 	</body>
