--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		
 			<p>Covarage so far is on php,html,css,c++,bootstrap, java and networking basics!</p>
 			<div class="col-md-5">
-				<h4>On going learnings</h4>
+				<h4>Learning Programs</h4>
 				<ul>
 					<li>Machine Learning</li>	
 					
