--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				</ul>
 			    </div>
 		
-			<p>Covarage so far is on php,html,css,c++,bootstrap, java and networking basics!</p>
+			<p>Covarage so far is on php,html,css,c++,bootstrap and networking basics!</p>
 			<div class="col-md-5">
 				<h4>Learning Programs</h4>
 				<ul>
