--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>LonacRally</title>
+		<title>malongo</title>
 		<!--link to stylesheet-->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
-		<h1><center>LONACRALLY @ DIAW</center></h1>
+		<h1><center>MALONGO @ DIAW</center></h1>
 	</head>
 	<body>
 		<nav>
@@ -40,8 +40,10 @@
 				<div class= "panel panel-info">
 					     <div class="panel panel-heading"><h4>Learning Programs</h4></div>
 					<div class="panel-body">
-						<a href="http://oauth.net/2/" class="btn btn-sm">API's on OATH2</a>
-						<li>Machine Learning</li>
+						<h3>
+							<li><a href="http://oauth.net/2/" class="btn btn-sm">API's on OATH2</a></li>
+							<li>Machine Learning</li>
+						</h3>
 					</div>
 					     
 				</div>
