--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     		<div class="blurb">
         		<h2>Hellow!</h2>
 			<p>I am a self learner on programming and softwares development.</p>
-			<p> <h2>Note :</h2> Machine can work better than you, so let us have it work for us. </p>
+			<p> 
+				<h2>"There is always another way of doing things"</h2>  
+			</p>
 			<div class="col-md-6">
 				<h3>My Interests</h3>
 				<ul>
