--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
+			<li><a href="/projects">Projects</a></li>
         	
     		</ul>
 		</nav>
