--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 		<div class="container">
     		<div class="blurb">
         		<h2>Hellow!</h2>
-			<p>I am a self learner on programming and softwares development.</p>
-			<p> 
-				<h2>"There is always another way of doing things"</h2>  
-			</p>
+			<p>I am a self learner on web and softwares development.</p>
+			
 			<div class="col-md-6">
 				<h3>My Interests</h3>
 				<ul>
