--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 							<li><a href="http://oauth.net/2/" class="btn btn-sm">API's on OATH2</a></li>
 							<li>Machine Learning</li>
 						</h3>
+						<h3>
+							<li>Android Apps Development</li>
+						</h3>
 					</div>
 					     
 				</div>
